working on admin panel

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_NAME="ReactJS LIB"
+REACT_APP_NAME="ReactJS APP"
 REACT_APP_DEV_API_URL="https://devapiurl.com/api/"
 APIPORT=8080
 APIHOST=localhost
