managed seed data

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ APIHOST=localhost
 PORT=3000
 MONGODB_URL=mongodb://localhost:27017/reactjsapp
 PASSPORT_SECRET=ilovemyindia
+ADMIN_EMAIL=ramesh.katalysttech@gmail.com
