--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ APIHOST=localhost
 PORT=3000
 MONGODB_URL=mongodb://localhost:27017/material-ui-app
 PASSPORT_SECRET=ilovemyindia
+ADMIN_EMAIL=ramesh.katalysttech@gmail.com
