--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.8.3",
+    "mui-datatables": "^2.13.3",
     "node-sass": "^4.13.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
